--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 
-.musica-lista{
+.musica-lista {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -83,4 +83,22 @@ body {
   height: auto;
   border-radius: 10px;
   border: 2px solid #555;
+}
+
+button {
+  cursor: pointer;
+  background-color: green;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding: 4px 6px;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  font-size: 16px;
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
 }
