--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
+
 
 :root {
   --texto: #E0E0E0;
@@ -12,41 +12,62 @@
 body {
   background-color: #121212;
   color: var(--texto);
-  padding: 20px;
+  padding: 1.25rem;
+  margin: 0 auto;
 }
 
 .header {
   display: flex;
   align-items: center;
-  gap: 15px;
-  margin-bottom: 40px;
+  gap: 0.9rem;
+  margin-bottom: 2.5rem;
 }
 
 .header img.vinil {
-  width: 60px;
+  max-width: 60px;
   height: 60px;
   border-radius: 50%;
 }
 
-.header h1 {
-  font-size: 28px;
+nav {
+  text-align: center;
 }
 
+nav ul {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
 
 .musica-lista {
-  display: flex;
-  flex-wrap: wrap;
   gap: 20px;
-  justify-content: center;
-  
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+/* Media QUERY */
+@media (max-width:800px) {
+  .musica-lista {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width:600px) {
+  .musica-lista {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .cartao {
   background-color: #1e1e1e;
   border-radius: 12px;
   padding: 20px;
-  width: 250px;
   text-align: center;
+
+  transition: transform 0.5s ease;
 }
 
 .cartao:hover {
@@ -96,7 +117,7 @@ body {
 .spotify {
   cursor: pointer;
   background-color: green;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   gap: 6px;
   padding: 4px 6px;
@@ -116,4 +137,30 @@ footer p {
   font-size: 0.9rem;
   color: var(--texto);
   padding: 1rem;
+}
+
+.sugestao {
+  padding: 20px;
+  max-width: 500px;
+  margin: 40px auto;
+  border-radius: 8px;
+  color: var(--texto);
+}
+
+.sugestao h2 {
+  color: var(--texto);
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.sugestao form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.sugestao fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
 }
